# Neurohue_Backend

./: .gitignore  docker-compose.yml
auth/: pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: 10e4febe1614_initial_auth_tables.py
auth/src/: main.py
auth/src/api/v1/endpoints/: admin.py  auth.py  user.py
auth/src/core/: config.py  exception_handler.py  exception_utils.py  security.py
auth/src/crud/: user_crud.py
auth/src/db/: base.py  redis_conn.py  session.py
auth/src/models/: user_model.py
auth/src/schemas/: auth_schema.py  token_schema.py  user_schema.py
auth/src/services/: auth_service.py  user_service.py
auth/src/utils/: deps.py
org/: Dockerfile  alembic.ini  pyproject.toml
org/alembic/versions/: 3fdffede0c84_center_model.py  5d2d4f8f5315_region_model.py  a83f9ce00ea6_centers_model.py  a9095d93eec7_center_fix.py
org/src/: main.py
org/src/api/v1/endpoints/: center.py  region.py  user.py
org/src/core/: config.py  exception_utils.py  exceptions.py  security.py
org/src/crud/: center_crud.py  region_crud.py
org/src/db/: base.py  session.py
org/src/models/: center_model.py  region_model.py
org/src/schemas/: center_schema.py  region_schema.py  user_schema.py
org/src/services/: center_service.py  rate_limit_service.py  region_service.py
org/src/utils/: deps.py
